SAK-17039 merge changes from branch back to trunk
git-svn-id: https://source.sakaiproject.org/svn/common/trunk@66866 66ffb92e-73f9-0310-93c1-f5514f145a0a